sign in with username

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "amazon-cognito-identity-js": "^1.16.0",
     "aws-sdk": "^2.36.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "uuid": "^3.0.1"
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
